--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "mongoose": "^5.12.13",
     "multer": "^1.4.2",
     "node-fetch": "^2.6.1",
+    "nodemailer": "^6.6.2",
     "nodemon": "^2.0.7",
     "passport": "^0.4.1",
     "passport-instagram": "^1.0.0"
